<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ChannelItem"
    android:background="@drawable/tv_background"
    android:gravity="start"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="高雅有范"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/item_gaoyaoyoufan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_gaoyayoufan"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.01"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/item_xiezhen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:orientation="horizontal"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_xiezhen"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/item_qizhi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_qizhi"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.01"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/item_shishang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:orientation="horizontal"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_shishang"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/item_changfa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_changfa"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.01"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/item_duanfa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:orientation="horizontal"
            android:padding="13dp" >

            <com.hua.goddess.widget.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_app_normal"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/str_duanfa"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>